# monorepo

./: .bazeliskrc  .bazelrc  .gitignore  BUILD  README.md  WORKSPACE  WORKSPACE.bazel
.github/workflows/: bazel.yaml  deploy.yaml  lint.yaml  linter.yaml  validate.yaml  verify.yaml
infrastructure/: .terraform.lock.hcl  main.tf  variables.tf  versions.tf
infrastructure/bootstrap/: .terraform.lock.hcl  main.tf  outputs.tf  providers.tf  variables.tf  versions.tf
infrastructure/satire_bot/: main.tf  variables.tf  versions.tf
raytracer/: BUILD  Cargo.toml  README.md
raytracer/pictures/: 05a_before_aa.ppm  05b_after_aa.ppm  06a_before_gamma_correction.ppm  06b_after_gamma_correction.ppm  06c_removing_shadow_acne.ppm  06d_fixing_lambertian_reflection.ppm  07a_reflective_metal.ppm
raytracer/src/: camera.rs  hittable.rs  main.rs  ray.rs  scene.rs  sphere.rs  vec3.rs
raytracer/src/material/: lambertian.rs  metal.rs  mod.rs
satire-bot/: BUILD  Procfile  README.md  go.mod  go.sum  main.tf  variables.tf
satire-bot/cmd/event_notifier/: BUILD.bazel  event_notifier.go
satire-bot/cmd/lambda/ping_pong/: BUILD.bazel  ping_pong.go
satire-bot/cmd/lambda/pong_ping/: BUILD.bazel  pong_ping.go
satire-bot/cmd/satire-bot/: satire-bot.go
satire-bot/config/: BUILD.bazel  config.go
satire-bot/iac/: main.tf  variables.tf
satire-bot/internal/: BUILD.bazel  greeter.go
satire-bot/internal/discord/: BUILD.bazel  discord.go
satire-bot/internal/event/: BUILD.bazel  ping_pong.go
satire-bot/internal/lambda_handler/: BUILD.bazel  ping_pong.go
satire-bot/internal/notifier/: BUILD.bazel  message.go  reaction.go
vtuber-scraper/: .gitignore  README.md  deps.ts  main.ts
