load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "ping_pong_lib",
    srcs = ["ping_pong.go"],
    importpath = "github.com/adarah/satirebot/cmd/lambda/ping_pong",
    visibility = ["//visibility:private"],
    deps = [
        "//satire-bot/internal/lambda_handler",
        "@com_github_aws_aws_lambda_go//lambda:go_default_library",
    ],
)

go_binary(
    name = "ping_pong",
    embed = [":ping_pong_lib"],
    goarch = "amd64",
    goos = "linux",
    visibility = ["//visibility:public"],
)
