load("@io_bazel_rules_go//go:def.bzl", "go_binary", "go_library")

go_library(
    name = "pong_ping_lib",
    srcs = ["pong_ping.go"],
    importpath = "github.com/adarah/satirebot/cmd/lambda/pong_ping",
    visibility = ["//visibility:private"],
    deps = [
        "//satire-bot/internal/lambda_handler",
        "@com_github_aws_aws_lambda_go//lambda",
    ],
)

go_binary(
    name = "pong_ping",
    embed = [":pong_ping_lib"],
    visibility = ["//visibility:public"],
)
